--- a/build.gradle
+++ b/build.gradle
@@ -18,10 +18,29 @@ repositories {
 }
 
 dependencies {
+	// Spring Boot
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+	// MySQL
 	implementation 'mysql:mysql-connector-java:8.0.33'
+
+	// Tomcat
+	implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
+
+	// JSTL
+	implementation 'javax.servlet:jstl:1.2'
+
+	// JSP API
+	implementation 'javax.servlet.jsp:javax.servlet.jsp-api:2.3.3'
+
+	// Spring Security Tag
+	implementation 'org.springframework.security:spring-security-taglibs:6.4.2'
+
+	// servlet API
+	implementation 'javax.servlet:javax.servlet-api:4.0.1'
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
