--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.4.1'
 	id 'io.spring.dependency-management' version '1.1.7'
+	id 'war'
 }
 
 group = 'rlguswn'
@@ -22,9 +23,13 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 
 	// MySQL
 	implementation 'mysql:mysql-connector-java:8.0.33'
+
+	// H2
+	// implementation 'com.h2database:h2'
 
 	// Tomcat
 	implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
@@ -46,4 +51,16 @@ dependencies {
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+tasks.named('processResources') {
+	duplicatesStrategy = DuplicatesStrategy.INCLUDE
+}
+
+bootJar {
+	enabled = false
+}
+
+war {
+	enabled = true
 }
